--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     --mario-red: #FF5555;
     --mario-blue: #C1E59F;
     --mario-yellow: #FF937E;
-    --mario-green: #A3D78A;
+    --mario-green: #80cc70;
     --mario-orange: #EC4899;
     --mario-purple: #FF937E;
     --mario-pink: #FF69B4;
@@ -14,7 +14,7 @@
     /* Cores de fundo - Verde Suave */
     --bg-light: #E8F5E9;
     --bg-green: #C8E6C9;
-    --bg-white: #FFF8E7;
+    --bg-white: #FEFEFE;
     
     /* Cores de texto */
     --text-dark: #5A5A5A;
@@ -99,7 +99,7 @@ body {
    ============================================ */
 .header {
     background: var(--bg-white);
-    border-bottom: 4px solid var(--mario-red);
+    /* border-bottom: 4px solid var(--mario-red); */
     box-shadow: 0 4px 8px var(--shadow-color);
     position: sticky;
     top: 0;
@@ -110,7 +110,7 @@ body {
 .header .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 var(--spacing-md);
+    padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -147,8 +147,8 @@ body {
 }
 
 .nav-link:hover {
-    color: var(--mario-blue);
-    border-bottom: 2px solid var(--mario-blue);
+    color: var(--mario-red);
+    border-bottom: 2px solid var(--mario-red);
 }
 
 .nav-link::after {
@@ -158,7 +158,7 @@ body {
     left: 0;
     width: 0;
     height: 2px;
-    background: var(--mario-blue);
+    background: var(--mario-red);
     transition: var(--transition-normal);
 }
 
@@ -198,9 +198,9 @@ body {
 }
 
 .btn-secondary {
-    background: var(--mario-blue);
+    background: var(--mario-red);
     color: var(--bg-white);
-    border-color: var(--mario-blue);
+    border-color: var(--mario-red);
     box-shadow: 0 4px 0 #7C3AED;
 }
 
@@ -239,7 +239,7 @@ section {
    SEÇÃO PORTFÓLIO
    ============================================ */
 .portfolio {
-    background: var(--bg-green);
+    background: var(--bg-white);
 }
 
 .portfolio-filters {
@@ -295,8 +295,8 @@ section {
 
 .portfolio-image {
     position: relative;
-    background: #dddddd;
-    border: 5px solid #FFF;
+    background: #F6F6F6;
+    border: 5px solid #dbdbdb;
     overflow: hidden;
     cursor: pointer;
     transition: var(--transition-normal);
@@ -361,7 +361,7 @@ section {
    SEÇÃO SOBRE
    ============================================ */
    .sobre {
-    background: var(--bg-white);
+    background: var(--bg-light);
 }
 
 .sobre-content {
